--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,12 @@
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "/aec-web2-tp1/img/icons-manifest/shrek144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "start_url": "https://isabelle913.github.io/aec-web2-tp1/",
